Amélioration des collisions et ajout de la stateMachine

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 /bin/
 
 .metadata/
+
+hs_err_pid12036.log
+
+hs_err_pid16644.log
+
+hs_err_pid19252.log
+
+hs_err_pid21240.log
+
+hs_err_pid21972.log
+
+hs_err_pid25008.log
+
+hs_err_pid26064.log
+
+hs_err_pid26796.log
+
+hs_err_pid4860.log
